# RabbitSAlign

./: CMakeLists.txt  LICENSE  README.md  build.sh
GASAL2/: Makefile  configure.sh
GASAL2/src/: ctors.cpp  ctors.h  gasal_align.cu  gasal_align.h  host_batch.cpp  host_batch.h
RabbitFX/io/: FastxStream.cpp  FastxStream.h
ext/: README.md
ext/ssw/: ssw_cpp.cpp  ssw_cpp.h
src/: aligner.cpp  aligner.hpp  aln.cpp  aln.hpp  cmdline.cpp  cmdline.hpp  gasal2_ssw.cpp  gasal2_ssw.h  gpu_alignment.cu  gpu_alignment.h  gpu_common.cu  gpu_common.h  gpu_merging.cu  gpu_merging.h  gpu_packing.cu  gpu_packing.h  gpu_pipeline.h  gpu_pipeline_common.cu  gpu_pipeline_common.h  gpu_pipeline_pe.cu  gpu_pipeline_pe.h  gpu_pipeline_se.cu  gpu_pipeline_se.h  gpu_seeding.cu  gpu_seeding.h  gpu_step.cu  gpu_step.h  hash.hpp  index.cpp  index.hpp  main.cpp  my_struct.cu  my_struct.hpp  nam.cpp  nam.hpp  pc.cpp  pc.hpp  randstrobes.hpp  sam.cpp  sam.hpp
src/include/: gasal.h
src/include/bb_seg_sort/: bb_bin_shared.h  bb_comput_l.h  bb_comput_s.h  bb_exch.h  bb_segsort.h  my_bb_segsort_shared.h  my_regsort_kernels.h  my_shared_merge_kernels.h  my_shared_merge_kernels_full_warps.h
src/include/gallatin/allocators/: global_allocator.cuh
